Few fixes and changes